dist_man1_MANS=

if BUILD_NAVCOIND
  dist_man1_MANS+=navcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=navcoin-qt.1
endif

if BUILD_NAVCOIN_CLI
  dist_man1_MANS+=navcoin-cli.1
endif

if BUILD_NAVCOIN_TX
  dist_man1_MANS+=navcoin-tx.1
endif

if BUILD_NAVCOIN_UTIL
  dist_man1_MANS+=navcoin-util.1
endif

if ENABLE_WALLET
if BUILD_NAVCOIN_WALLET
  dist_man1_MANS+=navcoin-wallet.1
endif
endif
